<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="map_initial_lat" translatable="false">47.86573</string>
    <string name="map_initial_lng" translatable="false">7.2315735</string>
    <string name="map_initial_zoom" translatable="false">8</string>

    <string name="app_name">DAE68</string>
    <string name="map">Map</string>
    <string name="unknown_version">Unknown version</string>

    <!-- Drawer -->
    <string name="drawer_toggle_description">Menu</string>
    <string name="satellite">Satellite</string>
    <string name="in_case_emergency">In case of emergency</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact us</string>
    <string name="about">About</string>

    <!-- Defib details -->
    <string name="environment_outdoors">Outdoors</string>
    <string name="environment_indoors">Indoors</string>
    <string name="directions">Show directions</string>
    <string name="tip_directions">Tap here to show the directions</string>
    <string name="tip_closest">Closest defibrillator</string>
    <string name="walking_directions_title">Show directions via:</string>
    <string name="at_distance">At %1$s</string>

    <!-- Errors -->
    <string name="error_snackbar_not_in_68">Out of the Haut-Rhin (France)?\nNo defibrillator referenced yet</string>
    <string name="error_snackbar_unknown_location">Your location is unknown</string>

    <string name="error_alert_title_location_disabled">Location services disabled</string>
    <string name="error_alert_details_location_disabled">You position has to be accessible to find the closest defibrillator.\nPlease enable the access to location data feature.</string>
    <string name="error_alert_title_airplane_enabled">Airplane mode enabled</string>
    <string name="error_alert_details_airplane_enabled">Looks like the airplane mode is enabled, to use the application, make sure your phone is connected to the network.\nPlease disable the Airplane mode.</string>
    <string name="error_alert_title_connectivity_unavailable">No network connection</string>
    <string name="error_alert_details_connectivity_unavailable">Please verify your connection, to use the application, make sure you are connected to a 3G/4G or Wi-Fi network.</string>
    <string name="error_alert_title_play_services_missing">Google Play Services missing</string>
    <string name="error_alert_details_play_services_missing">It is impossible to use the application without the Google Play services.\n\nThese services allow to display the map as well as your location.\n\nIf you think they are already installed please try again later, otherwise press on Install.</string>
    <string name="install">Install</string>
    <string name="ignore">Ignore</string>

    <!-- About -->
    <string name="about_details">The information found in this application are provided by the official website of the SAMU and firemen of the Haut-RHin www.dae68.fr\n\nIn case of cardiac arrest, do not lose time looking for an AED if you don\'t know its location.\n\nThe priority is to start a cardiopulmonary resuscitation and call the emergency services (<b>112</b>).</string>
    <string name="close">Close</string>

    <!-- Contact -->
    <string name="contact_title_chooser">Contact us via:</string>
    <string name="contact_email">android@dae68.fr</string>

    <!-- Noter appli-->
    <string name="rate_app">Rate the app</string>

    <!-- Tutorial -->
    <string name="tuto_title_closest" tools:ignore="TypographyFractions">Tip 1/3: Closest defibrillator</string>
    <string name="tuto_details_closest">Press the red button to quickly find the closest defibrillator from your current location</string>
    <string name="tuto_title_68">Tip 2/3: Show Haut-Rhin</string>
    <string name="tuto_details_68">Press the 68 button to zoom and center the map on the Haut-Rhin</string>
    <string name="tuto_title_location">Tip 3/3: Current location</string>
    <string name="tuto_details_location">Press the radar button to show your current location</string>

    <!-- In case of emergency -->
    <!-- English translation may be to improved -->
    <string name="emerg_title">Save a life</string>
    <string name="emerg_call">Alert</string>
    <string name="emerg_call_details">Alert rescue services at the 112</string>
    <string name="emerg_compress">Compress</string>
    <string name="emerg_compress_details">Compress at 100 movements per minute</string>
    <string name="emerg_defib">Use a defibrillator</string>
    <string name="emerg_defib_details">Follow the instructions of the defibrillator</string>

</resources>
