<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer"
    android:layout_width="@dimen/drawerWidth"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#FAFAFA" >

    <LinearLayout android:id="@+id/left_drawer_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="start"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bkg_drawer"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"
            />

        <Button
            android:id="@+id/map_type_chooser_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DrawerButton.Activable"
            android:text="@string/satellite"
            android:drawableLeft="@drawable/ic_satellite_grey600_24dp"
            />

        <View style="@style/Divider"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DrawerButton"
            android:text="@string/settings"
            android:drawableLeft="@drawable/ic_settings_grey600_24dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DrawerButton"
            android:text="@string/contact_us"
            android:drawableLeft="@drawable/ic_email_grey600_24dp"
            />
        <Button
            android:id="@+id/about_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DrawerButton"
            android:text="@string/about"
            android:drawableLeft="@drawable/ic_info_grey600_24dp"
            />

    </LinearLayout>
</ScrollView>