<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        >
        <ImageView
            android:id="@+id/ic_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cpr_call"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/txt_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ic_call"
            fontPath="fonts/Roboto-Bold.ttf"
            android:textStyle="bold"
            android:text="@string/emerg_call"/>
        <TextView
            android:id="@+id/txt_call_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ic_call"
            android:layout_below="@id/txt_call"
            android:text="@string/emerg_call_details"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        >

        <ImageView
            android:id="@+id/ic_compress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_cpr_mas"
            />
        <TextView
            android:id="@+id/txt_compress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ic_compress"
            fontPath="fonts/Roboto-Bold.ttf"
            android:textStyle="bold"
            android:text="@string/emerg_compress"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ic_compress"
            android:layout_below="@id/txt_compress"
            android:text="@string/emerg_compress_details"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        >

        <ImageView
            android:id="@+id/ic_defib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_cpr_defib"
            />
        <TextView
            android:id="@+id/txt_defib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ic_defib"
            fontPath="fonts/Roboto-Bold.ttf"
            android:textStyle="bold"
            android:text="@string/emerg_defib"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ic_defib"
            android:layout_below="@id/txt_defib"
            android:text="@string/emerg_defib_details"/>
    </RelativeLayout>

</LinearLayout>